forked VMs also need more memory