@@ -66,6 +66,8 @@ public class GenerateGenModelCodeStep extends AbstractAntTargetGenerator {
 		sb.append("<echo message=\"Generating EMF model code for generator model " + genModelPath + "\" />");
 		// TODO use constant here
 		sb.append("<java fork=\"true\" classname=\"" + IConstants.BUILDEXT_EXECUTABLE + "\" failonerror=\"true\">");
+		sb.append("<jvmarg value=\"-XX:MaxPermSize=256m\"/>");
+		sb.append("<jvmarg value=\"-Xmx2048m\"/>");
 		sb.append("<arg value=\"${ECLIPSE_HOME}\"/>");
 		sb.append("<arg value=\"" + genModelPath + "\"/>");
 		sb.append("<arg value=\"" + generatorModel.getProjectDir().getName() + "\"/>");
